--- a/关于乱码问题.md
+++ b/关于乱码问题.md
@@ -13,3 +13,5 @@ reload(sys)
 sys.setdefaultencoding('utf-8')
 
 db=MySQLdb.connect(user='root',charset='utf8') 
+
+MySQL的配置文件设置也必须配置成utf8 设置 MySQL 的 my.cnf 文件，在 [client]/[mysqld]部分都设置默认的字符集
